--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator | ODS </title>
+    <meta name="Author" content="Daham Sathmin">
+    <meta name="description" content="Realtime QR Code Genarator">
     <link rel="shortcut icon" href="./Assets/web/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
      <script
